0.02_2  2008-12-15
        - fixed page param handling

0.02_1  2008-12-14
        - added support for >100 friends
        - added support for >100 followers (pending Net::Twitter patch)
        - added implementation for IRC mask/password auth

0.02  2008-12-14
        - decode HTML entities
        - Use LWP::UserAgent::POE for non-blocking IO
        - Help added (marcusramberg)
        - dependencies (marcusramberg)

0.01  2008-12-06
        - initial dev release